[project]
name = "tr-spread-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8",
    "pandas>=3.0.2",
    "pandas-market-calendars>=5.3.1.2",
    "pyarrow>=23.0.1",
    "pytr>=0.4.7",
    "seaborn>=0.13.2",
    "yfinance>=1.2.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "ruff>=0.15.8",
]
